# kufar-private-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
kufar-api/: main.py
kufar-api/utils/: requester.py
tests/: test_filters.py
