[tool.poetry]
name = "kufar-api"
version = "0.1.0"
description = ""
authors = ["Kiel Ed <kieledssh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.3"
aiohttp = "^3.8.5"
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
line-length = 112
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"
